Fix resource paths, align header photo left, and match container id to CSS

--- a/Css/style.css
+++ b/Css/style.css
@@ -15,7 +15,7 @@ body{
 
 }
 header{
-     text-align: center;
+    text-align: left;
      background-color: wheat;
      grid-area: header;
 }
